--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,600;1,400;1,600&family=Open+Sans&display=swap');
+body{
+    background-color: #f5f5f5;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
 h1 {
     font-size: 2.5rem;
     font-weight: 700;
     margin-bottom: 1rem;
     text-align: center;
     font-family: 'Cormorant Garamond', serif;
+    padding-top: 1rem;
 
 }
 p{
@@ -13,6 +20,7 @@ p{
     margin-bottom: 1rem;
     text-align: center;
     font-family: 'Open Sans', sans-serif;
+    padding: 0 1rem;
 }
 img{
     display: block;
